# PintcloudDetect

devel/: .catkin
devel/lib/gou/: gou
devel/lib/pkgconfig/: gou.pc  louti.pc  po.pc  tai.pc
devel/lib/po/: po
devel/lib/tai/: tai
devel/share/gou/cmake/: gouConfig.cmake
devel/share/louti/cmake/: loutiConfig.cmake
devel/share/po/cmake/: poConfig.cmake
devel/share/tai/cmake/: taiConfig.cmake
src/gou/: CMakeLists.txt  package.xml  stup.launch
src/gou/src/: gou.cpp  linshi.cpp
src/louti/: .ycm_extra_conf.py  CMakeLists.txt  package.xml
src/louti/include/stairs/: StairVector.h  Stairs.h  regions.h
src/louti/src/: StairVector.cpp  Stairs.cpp  loutiwode.cpp  recognition.cpp
src/po/: CMakeLists.txt
src/po/launch/: rviz_test.launch
src/po/rviz/: rviz.rviz
src/po/src/: po.cpp
src/tai/: CMakeLists.txt  package.xml
src/tai/src/: tai.cpp
